tor (0.2.6.8-2) unstable; urgency=medium

  * Depend on dh-systemd, libsystemd-dev, and pkg-config only on linux-any.

 -- Peter Palfrader <weasel@debian.org>  Sat, 23 May 2015 15:44:30 +0200

tor (0.2.6.8-1) unstable; urgency=medium

  * New upstream version, upload 0.2.6.x tree to unstable.
  * Ship a systemd .service file (closes: #761403).
    Thanks to intrigeri and Arto Jantunen.
    - Build depend on dh-systemd, libsystemd-dev, pkg-config.
    - Build with --enable-systemd.
  * Autoreconf on build (closes: #783729).
    - Build depend on dh-autoreconf.

 -- Peter Palfrader <weasel@debian.org>  Sat, 23 May 2015 09:57:44 +0200

tor (0.2.6.7-1) experimental; urgency=medium

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Mon, 06 Apr 2015 17:17:44 +0200

tor (0.2.6.6-1) experimental; urgency=medium

  * New upstream version.
  * Stick to experimental for now to keep unstable open as a track to jessie.

 -- Peter Palfrader <weasel@debian.org>  Tue, 24 Mar 2015 21:56:04 +0100

tor (0.2.6.5-rc-1) experimental; urgency=medium

  * New upstream version.

 -- Peter Palfrader <weasel@debian.org>  Thu, 19 Mar 2015 14:55:37 +0100

tor (0.2.6.4-rc-1) experimental; urgency=medium

  * New upstream version.
  * Build with --enable-gcc-warnings-advisory.

 -- Peter Palfrader <weasel@debian.org>  Mon, 23 Feb 2015 18:39:37 +0100

tor (0.2.6.3-alpha-1) experimental; urgency=medium

  * New upstream version.
  * [intrigeri]
    + apparmor policy: Allow execution of /usr/bin/obfs4proxy (closes: #777592).
  * Run restorecon on /var/lib/tor /var/run/tor /var/log/tor in postinst (closes: #776352).
  * Suggests cleanup:
    + Stop suggesting xul-ext-torbutton, suggest torbrowser-launcher instead.
    + Stop suggesting polipo (>= 1) | privoxy - those are no longer considered
      good means to browser the web with Tor.
    + Suggest obfs4proxy in addition to obfsproxy.

 -- Peter Palfrader <weasel@debian.org>  Fri, 20 Feb 2015 11:34:40 +0100
